...
                    if viewModel.showClosedProjects == false {
                        Button {
                            withAnimation {
                                viewModel.addItem(to: project)
                            }
                        } label: {
                            Label("Add Item", systemImage: "plus")
                        }
                        .accessibilityLabel("Add Item")
                    }
                }
            }
        } // list views can have modifiers
...
